procaptcha: Update registry (#56)
procaptcha: * registry
procaptcha: 
procaptcha: * registry
procaptcha: 
procaptcha: Co-authored-by: seht <seht@hyx.net>

--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@prosopo/procaptcha",
   "version": "0.1.0",
-  "private": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -41,6 +40,6 @@
   "homepage": "https://github.com/prosopo-io/procaptcha#readme",
   "description": "",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry":"https://registry.npmjs.org"
   }
 }
