provider: eb deploy...

--- a/packages/provider/.gitignore
+++ b/packages/provider/.gitignore
@@ -108,3 +108,8 @@ secrets.json
 contracts/target/
 
 /artifacts/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
