--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -9,7 +9,7 @@
     "build": "tsc --build --verbose",
     "cli": "ts-node ./cli/cli.ts",
     "setup": "ts-node ./scripts/setup.ts",
-    "start": "ts-node ./cli/start.ts",
+    "start": "node ./dist/cli/start.js",
     "start:test": "NODE_ENV=test && ts-node ./cli/start.ts",
     "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
@@ -55,6 +55,7 @@
     "redspot": "^0.13.6",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.8.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   },
   "repository": {
