--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -4,13 +4,13 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "esnext"
+    "target": "es6"
   },
   "include": [
     "./src/**/*.ts"
   ],
   "files": [
-    "./src/prosopo.config.js",
+    "./src/prosopo.config.js"
   ],
   "references": [
     {
