--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -25,6 +25,7 @@
     "@polkadot/util-crypto": "^10.0.2",
     "@prosopo/procaptcha": "0.1.3",
     "@prosopo/procaptcha-react": "0.1.2",
+    "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
     "ethereum-blockies-base64": "^1.0.2",
     "next": "canary",
