--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "build-prod": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet",
     "lint-fix": "yarn run lint --fix",
