--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "build-prod": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet",
     "lint-fix": "yarn run lint --fix",
@@ -21,37 +21,32 @@
     "@polkadot/api": "^8.6.1",
     "@polkadot/api-contract": "^8.7.1",
     "@polkadot/rpc-provider": "^8.7.1",
-    "@polkadot/util": "^9.4.1",
-    "@polkadot/util-crypto": "^9.4.1",
-    "@prosopo/procaptcha": "0.0.0",
-    "@prosopo/procaptcha-react": "0.0.0",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9.8.6",
+    "@polkadot/util": "^10.0.2",
+    "@polkadot/util-crypto": "^10.0.2",
+    "@prosopo/procaptcha": "0.1.3",
+    "@prosopo/procaptcha-react": "0.1.2",
+    "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
-    "dotenv": "^16.0.1",
     "ethereum-blockies-base64": "^1.0.2",
     "next": "canary",
     "next-images": "^1.8.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "postcss": "^8.0.0",
-    "postcss-cli": "^8.3.1",
-    "postcss-loader": "^4.2.0",
     "react": "^17.0.0",
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.0",
+    "react-hot-toast": "^2.2.0",
     "react-query": "^3.25.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "webpack": "^5.72.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
-    "@fullhuman/postcss-purgecss": "^4.0.0",
     "@polkadot/types": "^8.7.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/node": "^14.14.25",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.2",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "electron": "^16.0.1",
@@ -64,9 +59,11 @@
     "husky": "^4.2.5",
     "lint-staged": "^11.2.0",
     "next-unused": "^0.0.6",
+    "postcss": "^8.4.14",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
     "react-docgen-typescript-loader": "^3.7.2",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.3"
   },
   "resolutions": {
