--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "es6"
+    "target": "esnext"
   },
   "include": [
     "./src/**/*.ts"
