--- a/packages/provider/tsconfig.package.json
+++ b/packages/provider/tsconfig.package.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.build.json",
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -11,10 +11,5 @@
   ],
   "files": [
     "./src/prosopo.config.js"
-  ],
-  "references": [ 
-    { 
-      "path": "../contract"
-    }
   ]
 }
