--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -46,13 +46,14 @@
     "zod": "^3.17.9"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.6",
     "@types/yargs": "^17.0.10",
     "c8": "^7.11.3",
     "fs-extra": "^10.1.0",
     "mocha": "^10.0.0",
     "mongodb-memory-server": "^8.7.2",
-    "redspot": "^0.13.6",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
