--- a/packages/provider/Dockerfile
+++ b/packages/provider/Dockerfile
@@ -7,8 +7,7 @@ COPY . ./
 ENV NODE_ENV $NODE_ENV
 
 RUN npm i
-# RUN npm run setup
 
 EXPOSE 3000
 
-CMD [ "npm", "run", "start" ]
+ENTRYPOINT [ "npm", "run", "serve" ]
