--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.0",
     "react-hot-toast": "^2.2.0",
     "react-query": "^3.25.0",
+    "react-top-loading-bar": "^2.1.0",
     "webpack": "^5.72.1"
   },
   "devDependencies": {
