--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@prosopo/procaptcha",
-  "version": "0.1.4",
+  "version": "0.1.5",
+  "author": "PROSOPO LIMITED <info@prosopo.io>",
+  "license": "Apache-2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -17,7 +19,7 @@
     "@polkadot/types": "^8.13.1",
     "@polkadot/util": "^10.0.2",
     "@polkadot/util-crypto": "^10.0.2",
-    "@prosopo/contract": "0.1.4",
+    "@prosopo/contract": "0.1.5",
     "axios": "^0.27.2"
   },
   "devDependencies": {
@@ -28,8 +30,6 @@
     "typescript": "^4.7.4"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prosopo-io/procaptcha.git"
