--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@prosopo/procaptcha-react",
-  "version": "0.1.4",
+  "version": "0.1.5",
+  "author": "PROSOPO LIMITED <info@prosopo.io>",
+  "license": "Apache-2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -11,7 +13,7 @@
   "dependencies": {
     "@mui/material": "^5.8.3",
     "@mui/styles": "^5.8.3",
-    "@prosopo/procaptcha": "0.1.4",
+    "@prosopo/procaptcha": "0.1.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -20,8 +22,6 @@
     "@types/react-dom": "^17.0.0",
     "typescript": "^4.7.4"
   },
-  "author": "",
-  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prosopo-io/procaptcha-react.git"
