provider: docker env

--- a/packages/provider/Dockerfile
+++ b/packages/provider/Dockerfile
@@ -5,9 +5,11 @@ WORKDIR /usr/src/app
 COPY . ./
 
 ENV NODE_ENV $NODE_ENV
+ENV DATABASE_PASSWORD $MONGO_INITDB_ROOT_PASSWORD
 
 RUN npm i
+RUN npm run build:docker
 
 EXPOSE 3000
 
-ENTRYPOINT [ "npm", "run", "serve" ]
+ENTRYPOINT [ "npm", "run", "serve:docker" ]
