provider: setup to cli

--- a/packages/provider/Dockerfile
+++ b/packages/provider/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /usr/src/app
 COPY . ./
 
 RUN npm i
-RUN npm run build:docker
+RUN npm run build:config -- ./tsconfig.docker.json
 
 EXPOSE 3000
 
-ENTRYPOINT [ "npm", "run", "serve:docker" ]
+ENTRYPOINT [ "npm", "run", "serve" ]
