--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -8,15 +8,12 @@
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "build:docker": "tsc --project ./tsconfig.docker.json",
-    "cli": "ts-node ./cli/cli.ts",
-    "setup": "ts-node ./scripts/setup.ts",
-    "setup:docker": "ts-node --project ./tsconfig.docker.json ./scripts/setup.ts",
+    "build:config": "tsc --project",
+    "cli": "node ./dist/cli/cli.js",
+    "setup": "node ./dist/cli/setup.js",
     "start": "node ./dist/cli/start.js",
-    "start:test": "NODE_ENV=test && ts-node ./cli/start.ts",
-    "serve:docker": "npm run setup:docker && npm run start",
+    "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
-    "imageserver:start": "ts-node ./scripts/imageserver.ts",
     "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000",
     "coverage": "npx c8 npm run test",
     "populate-data": "ts-node ./src/dataUtils/populateDatabase.ts",
