demo-nft-marketplace: Develop (#19)
demo-nft-marketplace: * update contract
demo-nft-marketplace: 
demo-nft-marketplace: * add demo api
demo-nft-marketplace: 
demo-nft-marketplace: * update marketplace (remove ethereum stuff)
demo-nft-marketplace: 
demo-nft-marketplace: * cleanup
demo-nft-marketplace: 
demo-nft-marketplace: * mint 100 items on deploy
demo-nft-marketplace: 
demo-nft-marketplace: * hide product card bg image
demo-nft-marketplace: 
demo-nft-marketplace: * clean up
demo-nft-marketplace: 
demo-nft-marketplace: * update buy function
demo-nft-marketplace: 
demo-nft-marketplace: * remove unused assets
demo-nft-marketplace: 
demo-nft-marketplace: * add prices, buying and estimated gas
demo-nft-marketplace: 
demo-nft-marketplace: * update is_human and errors
demo-nft-marketplace: 
demo-nft-marketplace: * fix and move contract
demo-nft-marketplace: 
demo-nft-marketplace: * update nft marketplace
demo-nft-marketplace: 
demo-nft-marketplace: * update demo contract
demo-nft-marketplace: 
demo-nft-marketplace: * add setup
demo-nft-marketplace: 
demo-nft-marketplace: * add gas input
demo-nft-marketplace: 
demo-nft-marketplace: * Docker files for deploying demo-nft-marketplace
demo-nft-marketplace: 
demo-nft-marketplace: * Integration (#6)
demo-nft-marketplace: 
demo-nft-marketplace: * update contract
demo-nft-marketplace: 
demo-nft-marketplace: * add demo api
demo-nft-marketplace: 
demo-nft-marketplace: * update marketplace (remove ethereum stuff)
demo-nft-marketplace: 
demo-nft-marketplace: * cleanup
demo-nft-marketplace: 
demo-nft-marketplace: * mint 100 items on deploy
demo-nft-marketplace: 
demo-nft-marketplace: * hide product card bg image
demo-nft-marketplace: 
demo-nft-marketplace: * clean up
demo-nft-marketplace: 
demo-nft-marketplace: * update buy function
demo-nft-marketplace: 
demo-nft-marketplace: * remove unused assets
demo-nft-marketplace: 
demo-nft-marketplace: * add prices, buying and estimated g

--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -3,71 +3,68 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "build-prod": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
-    "lint": "eslint '*/**/*.{ts,tsx}' --quiet",
-    "lint-fix": "yarn run lint --fix",
+    "lint": "eslint '*/**/*.{ts,tsx}'",
+    "lint:fix": "npm run lint --fix",
     "find:unused": "next-unused",
     "setup": "node ./scripts/setup.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@headlessui/react": "^1.4.1",
-    "@heroicons/react": "^1.0.4",
-    "@polkadot/api": "^8.6.1",
-    "@polkadot/api-contract": "^8.7.1",
-    "@polkadot/rpc-provider": "^8.7.1",
-    "@polkadot/util": "^9.4.1",
-    "@polkadot/util-crypto": "^9.4.1",
-    "@prosopo/procaptcha": "0.0.0",
-    "@prosopo/procaptcha-react": "0.0.0",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9.8.6",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "@polkadot/api": "^8.13.1",
+    "@polkadot/api-contract": "^8.13.1",
+    "@polkadot/rpc-provider": "^8.13.1",
+    "@polkadot/util": "^10.0.2",
+    "@polkadot/util-crypto": "^10.0.2",
+    "@prosopo/procaptcha": "0.1.5",
+    "@prosopo/procaptcha-react": "0.1.5",
+    "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
-    "dotenv": "^16.0.1",
     "ethereum-blockies-base64": "^1.0.2",
     "next": "canary",
-    "next-images": "^1.8.1",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "postcss": "^8.0.0",
-    "postcss-cli": "^8.3.1",
-    "postcss-loader": "^4.2.0",
+    "next-images": "^1.8.4",
+    "node-polyfill-webpack-plugin": "^2.0.0",
     "react": "^17.0.0",
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.0",
-    "react-query": "^3.25.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "webpack": "^5.72.1"
+    "react-hot-toast": "^2.3.0",
+    "react-top-loading-bar": "^2.1.0",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@fullhuman/postcss-purgecss": "^4.0.0",
-    "@polkadot/types": "^8.7.1",
-    "@types/node": "^14.14.25",
-    "@types/react": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.18.9",
+    "@polkadot/types": "^8.13.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "electron": "^16.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
+    "electron": "^19.0.8",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "fs-extra": "^10.1.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^11.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "next-unused": "^0.0.6",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
+    "postcss": "^8.4.14",
+    "postcss-preset-env": "^7.7.2",
+    "prettier": "^2.7.1",
     "react-docgen-typescript-loader": "^3.7.2",
-    "typescript": "^4.7.3"
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "did-jwt": "5.1.0"
