--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
-    "build": "tsc --build --verbose"
+    "build": "tsc --build --verbose",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
     "@mui/material": "^5.8.3",
@@ -20,6 +22,9 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "typescript": "^4.7.4"
   },
   "repository": {
@@ -32,6 +37,6 @@
   "homepage": "https://github.com/prosopo-io/procaptcha-react#readme",
   "description": "",
   "publishConfig": {
-    "registry":"https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org"
   }
 }
