--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -1,35 +1,40 @@
 {
   "name": "@prosopo/procaptcha",
-  "version": "0.1.0",
+  "version": "0.1.5",
+  "author": "PROSOPO LIMITED <info@prosopo.io>",
+  "license": "Apache-2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" && exit 0",
     "clean": "tsc --build --clean",
-    "build": "tsc --build --verbose"
+    "build": "tsc --build --verbose",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
-    "@polkadot/api": "^8.7.1",
-    "@polkadot/api-contract": "^8.7.1",
+    "@polkadot/api": "^8.13.1",
+    "@polkadot/api-contract": "^8.13.1",
     "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-inject": "^0.44.1",
-    "@polkadot/rpc-provider": "^8.7.1",
-    "@polkadot/types": "^8.7.1",
-    "@polkadot/util": "^9.4.1",
-    "@polkadot/util-crypto": "^9.4.1",
-    "@prosopo/contract": "0.1.0",
+    "@polkadot/rpc-provider": "^8.13.1",
+    "@polkadot/types": "^8.13.1",
+    "@polkadot/util": "^10.0.2",
+    "@polkadot/util-crypto": "^10.0.2",
+    "@prosopo/contract": "0.1.5",
     "axios": "^0.27.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "chai": "^4.3.6",
+    "eslint": "^8.20.0",
     "mocha": "^10.0.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prosopo-io/procaptcha.git"
@@ -40,6 +45,6 @@
   "homepage": "https://github.com/prosopo-io/procaptcha#readme",
   "description": "",
   "publishConfig": {
-    "registry":"https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org"
   }
 }
