--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,67 +1,73 @@
 {
   "name": "@prosopo/provider",
   "version": "0.0.0",
-  "author": "Prosopo",
+  "author": "PROSOPO LIMITED <info@prosopo.io>",
+  "license": "Apache-2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "cli": "ts-node ./cli/cli.ts",
-    "start": "ts-node ./cli/start.ts",
-    "start:test": "NODE_ENV=test && ts-node ./cli/start.ts",
-    "setup": "ts-node ./scripts/setup.ts",
+    "build:config": "tsc --project",
+    "cli": "node ./dist/cli/cli.js",
+    "setup": "node ./dist/cli/setup.js",
+    "start": "node ./dist/cli/start.js",
+    "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
-    "imageserver:start": "ts-node ./scripts/imageserver.ts",
-    "test": "npm run remove-test-container && docker compose up -d substrate-test-node && NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000",
+    "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000 && exit 0",
     "coverage": "npx c8 npm run test",
-    "remove-test-container": "CONTAINER=$(docker ps -q -f name=substrate-test-node) && docker stop $CONTAINER || true && docker rm $CONTAINER || true",
     "populate-data": "ts-node ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "npm run cli -- provider_register --fee=10 --origin=https://localhost:8282 --payee=Provider --address=$PROVIDER_ADDRESS",
     "dev-provider-stake": "npm run cli -- provider_update --value 2000000000000 --address=$PROVIDER_ADDRESS",
-    "dev-provider-dataset": "npm run cli -- provider_add_data_set --file ./tests/mocks/data/captchas.json"
+    "dev-provider-dataset": "npm run cli -- provider_add_data_set --file ./tests/mocks/data/captchas.json",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
-    "@polkadot/api": "^8.7.1",
-    "@polkadot/api-contract": "^8.7.1",
-    "@polkadot/keyring": "^9.4.1",
-    "@polkadot/types": "^8.7.1",
-    "@polkadot/types-codec": "^8.7.1",
-    "@polkadot/types-create": "^8.7.1",
-    "@polkadot/util": "^9.4.1",
-    "@polkadot/util-crypto": "^9.4.1",
-    "@prosopo/contract": "0.0.0",
+    "@polkadot/api": "^8.13.1",
+    "@polkadot/api-contract": "^8.13.1",
+    "@polkadot/keyring": "^10.0.2",
+    "@polkadot/types": "^8.13.1",
+    "@polkadot/types-codec": "^8.13.1",
+    "@polkadot/types-create": "^8.13.1",
+    "@polkadot/util": "^10.0.2",
+    "@polkadot/util-crypto": "^10.0.2",
+    "@prosopo/contract": "^0.1.6",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "consola": "^2.15.3",
     "cors": "^2.8.5",
-    "cron": "^2.0.0",
-    "cron-parser": "^4.4.0",
+    "cron": "^2.1.0",
+    "cron-parser": "^4.5.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0",
+    "mongodb": "^4.8.0",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
     "yargs-parser": "^21.0.1",
-    "zod": "^3.17.3"
+    "zod": "^3.17.9"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.6",
     "@types/yargs": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "c8": "^7.11.3",
+    "eslint": "^8.20.0",
     "fs-extra": "^10.1.0",
     "mocha": "^10.0.0",
-    "mongodb-memory-server": "^8.6.0",
-    "redspot": "^0.13.6",
+    "mongodb-memory-server": "^8.7.2",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/prosopo-io/provider.git"
   },
-  "license": "GPL-3.0",
   "description": "> NOTE: The easiest way to deploy the Prosopo contract and run the Provider node is via the [integration repository](https://github.com/prosopo-io/integration/). The following instructions explain how to set up the repositories manually.",
   "bugs": {
     "url": "https://github.com/prosopo-io/provider/issues"
