--- a/packages/provider/.gitignore
+++ b/packages/provider/.gitignore
@@ -6,7 +6,6 @@ node_modules
 *.tsbuildinfo
 .DS_Store
 mongodb
-env
 
 # Below is Github's node gitignore template,
 # ignoring the node_modules part, as it'd ignore every node_modules, and we have some for testing
@@ -102,9 +101,14 @@ dist/
 /.yarn/install-state.gz
 
 secrets.json
-.env
+.env*
 
 # Ingnore build target
 contracts/target/
 
 /artifacts/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
