provider: Use the new error handler

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -41,7 +41,7 @@
     "cron-parser": "^4.5.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.8.0",
+    "mongodb": "4.8.1",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
     "yargs-parser": "^21.0.1",
