--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -13,10 +13,11 @@
     "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.3.6",
     "@polkadot/api": "^8.13.1",
     "@polkadot/api-contract": "^8.13.1",
-    "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-base": "^0.44.1",
+    "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-inject": "^0.44.1",
     "@polkadot/rpc-provider": "^8.13.1",
     "@polkadot/types": "^8.13.1",
