--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mui/material": "^5.8.3",
     "@mui/styles": "^5.8.3",
+    "@prosopo/i18n": "0.0.1",
     "@prosopo/procaptcha": "0.1.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
