--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -33,6 +33,7 @@
     "@polkadot/util": "^10.0.2",
     "@polkadot/util-crypto": "^10.0.2",
     "@prosopo/contract": "^0.1.7",
+    "@prosopo/i18n": "0.0.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "consola": "^2.15.3",
