--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -22,7 +22,8 @@
     "@polkadot/types": "^8.13.1",
     "@polkadot/util": "^10.0.2",
     "@polkadot/util-crypto": "^10.0.2",
-    "@prosopo/contract": "0.1.7",
+    "@prosopo/contract": "0.1.8",
+    "@prosopo/datasets": "0.1.8",
     "axios": "^0.27.2"
   },
   "devDependencies": {
