--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
