--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@polkadot/api": "^8.13.1",
     "@polkadot/api-contract": "^8.13.1",
-    "@polkadot/extension-dapp": "^0.44.1",
-    "@polkadot/extension-base": "^0.44.1",
-    "@polkadot/extension-inject": "^0.44.1",
+    "@polkadot/extension-dapp": "0.44.1",
+    "@polkadot/extension-base": "0.44.1",
+    "@polkadot/extension-inject": "0.44.1",
     "@polkadot/rpc-provider": "^8.13.1",
     "@polkadot/types": "^8.13.1",
     "@polkadot/util": "^10.0.2",
