--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -21,5 +21,16 @@
   "devDependencies": {
     "@types/node": "^18.7.18",
     "typescript": "^4.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prosopo/i18n.git"
+  },
+  "bugs": {
+    "url": "https://github.com/prosopo/i18n/issues"
+  },
+  "homepage": "https://github.com/prosopo/i18n#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
