--- a/demos/demo-nft-marketplace/contracts/Cargo.toml
+++ b/demos/demo-nft-marketplace/contracts/Cargo.toml
@@ -17,7 +17,7 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 
 brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
 
-prosopo = { git = "https://github.com/prosopo-io/protocol", branch = "ink-3.2.0", default-features = false, features = ["ink-as-dependency"] }
+prosopo = { git = "https://github.com/prosopo/protocol", branch = "ink-3.2.0", default-features = false, features = ["ink-as-dependency"] }
 
 base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
