--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -16,8 +16,8 @@
     "@fingerprintjs/fingerprintjs": "^3.3.6",
     "@polkadot/api": "^8.13.1",
     "@polkadot/api-contract": "^8.13.1",
-    "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-base": "^0.44.1",
+    "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-inject": "^0.44.1",
     "@polkadot/rpc-provider": "^8.13.1",
     "@polkadot/types": "^8.13.1",
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^5.30.7",
     "chai": "^4.3.6",
     "eslint": "^8.20.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "mocha": "^10.0.0",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.7.4"
