--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -23,8 +23,8 @@
     "@polkadot/rpc-provider": "^8.13.1",
     "@polkadot/util": "^10.0.2",
     "@polkadot/util-crypto": "^10.0.2",
-    "@prosopo/procaptcha": "0.1.6",
-    "@prosopo/procaptcha-react": "0.1.6",
+    "@prosopo/procaptcha": "^0.1.9",
+    "@prosopo/procaptcha-react": "^0.1.9",
     "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
     "ethereum-blockies-base64": "^1.0.2",
