--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prosopo/procaptcha-react",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "author": "PROSOPO LIMITED <info@prosopo.io>",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
@@ -15,8 +15,8 @@
   "dependencies": {
     "@mui/material": "^5.8.3",
     "@mui/styles": "^5.8.3",
-    "@prosopo/i18n": "0.0.1",
-    "@prosopo/procaptcha": "0.1.8",
+    "@prosopo/i18n": "^0.0.1",
+    "@prosopo/procaptcha": "^0.1.8",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
