--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -13,7 +13,10 @@
     "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
-    "@mui/material": "^5.8.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "@mui/styles": "^5.8.3",
     "@prosopo/i18n": "^0.0.1",
     "@prosopo/procaptcha": "^0.1.8",
