procaptcha: remove providerApi

--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -15,10 +15,13 @@
   ],
   "references": [
     {
+      "path": "../api"
+    },
+    {
       "path": "../provider"
     },
     {
       "path": "../contract"
-    }
+    },
   ]
 }
