--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client-example-server",
-  "version": "1.0.0",
+  "version": "0.1.10",
   "description": "Backend for client-example",
   "main": "build/app.js",
   "scripts": {
@@ -22,6 +22,8 @@
     "axios": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "mongoose-sequence": "^5.3.1"
+    "mongoose-sequence": "^5.3.1",
+    "@prosopo/procaptcha": "^0.1.10",
+    "@prosopo/api": "^0.1.10"
   }
 }
