--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/parser": "^5.30.7",
     "c8": "^7.11.3",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "fs-extra": "^10.1.0",
     "mocha": "^10.0.0",
     "mongodb-memory-server": "^8.7.2",
