--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -23,7 +23,7 @@
     "@polkadot/types": "^8.13.1",
     "@polkadot/util": "^10.0.2",
     "@polkadot/util-crypto": "^10.0.2",
-    "@prosopo/api": "0.1.10",
+    "@prosopo/api": "^0.1.10",
     "@prosopo/contract": "^0.1.10",
     "@prosopo/datasets": "^0.1.10",
     "axios": "^0.27.2"
