provider: fix tests

--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDirs": ["./src", "./tests"],
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "esnext"
+    "target": "esnext",
+    "types": ["jest"]
   },
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./tests/**/*.ts"
   ],
   "files": [
     "./src/prosopo.config.js"
