procaptcha: user solutions stored separately from commitments

--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -15,13 +15,18 @@
   ],
   "references": [
     {
+      "path": "../datasets"
+    },
+    {
+      "path": "../contract"
+    },
+    {
       "path": "../api"
     },
     {
       "path": "../provider"
     },
-    {
-      "path": "../contract"
-    },
+
+
   ]
 }
