--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client-example-server",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Backend for client-example",
   "main": "build/app.js",
   "scripts": {
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/prosopo/client-example-server#readme",
   "dependencies": {
+    "@prosopo/api": "^0.1.11",
+    "@prosopo/contract": "^0.1.11",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "mongoose-sequence": "^5.3.1",
-    "@prosopo/contract": "^0.1.10",
-    "@prosopo/api": "^0.1.10"
+    "mongoose-sequence": "^5.3.1"
   }
 }
