provider: added npm and ts dependencies

--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -14,7 +14,13 @@
   ],
   "references": [
     {
+      "path": "../datasets"
+    },
+    {
       "path": "../contract"
+    },
+    {
+      "path": "../i18n"
     }
   ]
 }
