--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -18,7 +18,7 @@
       "path": "../api"
     },
     {
-      "path": "../provider"
+      "path": "../datasets"
     },
     {
       "path": "../contract"
