--- a/demos/client-example-server/tsconfig.json
+++ b/demos/client-example-server/tsconfig.json
@@ -27,5 +27,13 @@
     "./src/**/*.ts",
     "./src/**/*.js"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    {
+      "path": "../api"
+    },
+    {
+      "path": "../contract"
+    }
+  ]
 }
