--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -34,7 +34,7 @@
     "@polkadot/util-crypto": "^10.0.2",
     "@prosopo/contract": "^0.1.10",
     "@prosopo/datasets": "^0.1.10",
-    "@prosopo/i18n": "^0.1.10",
+    "@prosopo/common": "^0.1.10",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "consola": "^2.15.3",
