--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -18,7 +18,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@mui/styles": "^5.8.3",
-    "@prosopo/i18n": "^0.1.10",
+    "@prosopo/common": "^0.1.10",
     "@prosopo/procaptcha": "^0.1.10",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
