--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "rootDirs": ["./src", "./tests"],
+    "rootDir": "./src",
     "outDir": "./dist",
     "module": "commonjs",
     "target": "esnext"
   },
   "include": [
-    "./src/**/*.ts",
-    "./tests/**/*.ts"
+    "./src/**/*.ts"
   ],
   "files": [
     "./src/prosopo.config.ts"
