demo-nft-marketplace: upgrade polkadot deps

--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -18,12 +18,12 @@
     "@emotion/styled": "^11.9.3",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@polkadot/api": "^8.13.1",
-    "@polkadot/api-contract": "^8.13.1",
-    "@polkadot/rpc-provider": "^8.13.1",
-    "@polkadot/util": "^10.0.2",
-    "@polkadot/util-crypto": "^10.0.2",
-    "@prosopo/procaptcha-react": "^0.1.9",
+    "@polkadot/api": "9.10.2",
+    "@polkadot/api-contract": "9.10.2",
+    "@polkadot/rpc-provider": "9.10.2",
+    "@polkadot/util": "^10.2.1",
+    "@polkadot/util-crypto": "^10.2.1",
+    "@prosopo/procaptcha-react": "^0.1.10",
     "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
     "ethereum-blockies-base64": "^1.0.2",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
-    "@polkadot/types": "^8.13.1",
+    "@polkadot/types": "9.10.2",
     "@tailwindcss/forms": "^0.5.2",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
