--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,12 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1"
   },
   "repository": {
     "type": "git",
