--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -24,12 +24,12 @@
     "lint:fix": "npx eslint . --fix"
   },
   "dependencies": {
-    "@polkadot/api": "9.10.2",
-    "@polkadot/api-contract": "9.10.2",
+    "@polkadot/api": "^9.10.3",
+    "@polkadot/api-contract": "^9.10.3",
     "@polkadot/keyring": "^10.2.1",
-    "@polkadot/types": "9.10.2",
-    "@polkadot/types-codec": "9.10.2",
-    "@polkadot/types-create": "9.10.2",
+    "@polkadot/types": "^9.10.3",
+    "@polkadot/types-codec": "^9.10.3",
+    "@polkadot/types-create": "^9.10.3",
     "@polkadot/util": "^10.2.1",
     "@polkadot/util-crypto": "^10.2.1",
     "@prosopo/common": "^0.1.10",
