--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prosopo/demo-nft-marketplace",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3002",
@@ -18,9 +18,9 @@
     "@emotion/styled": "^11.9.3",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@polkadot/api": "9.10.2",
-    "@polkadot/api-contract": "9.10.2",
-    "@polkadot/rpc-provider": "9.10.2",
+    "@polkadot/api": "^9.10.3",
+    "@polkadot/api-contract": "^9.10.3",
+    "@polkadot/rpc-provider": "^9.10.3",
     "@polkadot/util": "^10.2.1",
     "@polkadot/util-crypto": "^10.2.1",
     "@prosopo/procaptcha-react": "^0.1.10",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
-    "@polkadot/types": "9.10.2",
+    "@polkadot/types": "^9.10.3",
     "@tailwindcss/forms": "^0.5.2",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
