provider: Update contract addresses, ports to be non-default

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prosopo/provider",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "author": "PROSOPO LIMITED <info@prosopo.io>",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
@@ -11,7 +11,7 @@
     "build:config": "tsc --project",
     "cli": "node ./dist/cli/cli.js",
     "setup": "node ./dist/cli/setup.js",
-    "start": "node ./dist/cli/start.js",
+    "start": "API_PORT=8282 node ./dist/cli/start.js",
     "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "test": "NODE_ENV=test ts-mocha tests/**/*.test.ts --timeout 120000 --recursive --exit",
@@ -32,9 +32,9 @@
     "@polkadot/types-create": "^9.10.3",
     "@polkadot/util": "^10.2.1",
     "@polkadot/util-crypto": "^10.2.1",
-    "@prosopo/common": "^0.1.10",
-    "@prosopo/contract": "^0.1.10",
-    "@prosopo/datasets": "^0.1.10",
+    "@prosopo/common": "^0.1.11",
+    "@prosopo/contract": "^0.1.11",
+    "@prosopo/datasets": "^0.1.11",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "consola": "^2.15.3",
