provider: all tests working and newest version of contract updated in env files

--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "rootDirs": ["./src","./tests"],
+    "rootDir": "./src",
     "outDir": "./dist",
     "module": "commonjs",
     "target": "esnext"
   },
   "include": [
     "./src/**/*.ts",
-    "./tests/**/*.ts"
+//    "./tests/**/*.ts"
   ],
   "files": [
     "./src/prosopo.config.ts"
