--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -25,19 +25,29 @@ jobs:
           repository: prosopo/workspaces
           path: workspaces
           submodules: recursive
-      # This part here is cloning a second repository
-      # While cloning the repository:
-      #   - it clones the repo into the given `path`
+          branch: upgrade_deps
+
       - name: Clone scripts repository
         uses: actions/checkout@v2
         with:
           repository: prosopo/scripts
           path: scripts
+          branch: upgrade_deps
 
       - name: Run the unit tests
         run: |
           cd scripts
           docker compose --file ./docker/docker-compose.development.yml up -d
+
+      - name: Install dependencies
+        run: |
+          cd workspaces
+          npm i
+
+      - name: Build provider and dependencies
+        run: |
+          cd workspaces
+          npm run bd provider
 
       - name: Setup the environment
         run: |
