provider: try to use workspaces package-lock

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -65,16 +65,10 @@ jobs:
         with:
           node-version: current
           cache: npm
-#        env:
-#          cache-name: cache-node-modules
-#        with:
-#          # npm cache files are stored in `~/.npm` on Linux/macOS
-#          path: ~/.npm
-#          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-build-${{ env.cache-name }}-
-#            ${{ runner.os }}-build-
-#            ${{ runner.os }}-
+          path: ~/.npm
+          key: ${{ runner.os }}-${{ hashFiles('~/workspaces/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-
 
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: List the state of node modules
