provider: make sure we're on the right branch

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -86,12 +86,14 @@ jobs:
       - name: Build provider and dependencies
         run: |
           cd workspaces
+          npm run checkout ${{ matrix.branch }}
           cat package.json
           npm run build+deps provider
 
       - name: Setup the environment and run the unit tests
         run: |
           cd workspaces
+          npm run checkout ${{ matrix.branch }}
           NODE_ENV=$ENVIRONMENT npm run setup
           cd packages/provider
           NODE_ENV=$ENVIRONMENT npm run test
