--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
-        branch: [ upgrade_deps ]
+        branch: [ tests-workflow ]
     runs-on: ${{ matrix.os }}
 
     steps:
